# hed-specification

./: .gitignore  CHANGELOG.md  README.md  lychee.toml  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: codespell.yml  deploy-docs.yml  links.yaml  mdformat.yaml
docs/source/: 01_Introduction.md  03_HED_formats.md  05_Advanced_annotation.md  07_Library_schemas.md  08_HED_ontology.md  Appendix_A.md  conf.py  index.rst
docs/source/_templates/: base.html
