[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hed-specification"
version = "4.0.0"
description = "Official specification for Hierarchical Event Descriptors (HED)"
readme = "README.md"
license = "MIT"
authors = [
    {name = "HED Working Group", email = "hed.maintainers@gmail.com"}
]
maintainers = [
    {name = "HED Maintainers", email = "hed.maintainers@gmail.com"}
]
keywords = [
    "HED", 
    "hierarchical event descriptors", 
    "neuroscience", 
    "EEG", 
    "specification",
    "documentation",
    "BIDS"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Documentation",
    "Topic :: Software Development :: Documentation"
]
requires-python = ">=3.10"
dependencies = []

# Package discovery - exclude data directories
[tool.setuptools]
packages = []  # This is a documentation-only project, no Python packages

[tool.setuptools.package-data]
# Include data files but don't treat directories as packages
"*" = ["*.md", "*.rst", "*.txt", "*.yaml", "*.yml"]

[project.optional-dependencies]
dev = [
    # Documentation dependencies
    "sphinx>=7.1.0,<10.0.0",
    "furo>=2024.1.29",
    "myst-parser>=3.0.0",
    "sphinx-copybutton>=0.5.2",
    "linkify-it-py>=2.0.3",
    # Quality/development tools
    "codespell>=2.2.0",
    "ruff>=0.8.0",
    "mdformat>=0.7.0",
    "mdformat-myst>=0.1.5",
]

[project.urls]
Homepage = "https://www.hedtags.org/hed-specification"
Documentation = "https://www.hedtags.org/hed-specification"
Repository = "https://github.com/hed-standard/hed-specification"
Issues = "https://github.com/hed-standard/hed-specification/issues"
Changelog = "https://github.com/hed-standard/hed-specification/blob/main/CHANGELOG.md"
"HED Homepage" = "https://www.hedtags.org"
"HED Resources" = "https://www.hedtags.org/hed-resources"

# Tool configurations
[tool.codespell]
skip = ".git,*.pdf,*.svg,deprecated,*.xml,*.mediawiki,*.omn,*.json,*.html,*.js,*.css,*.png,*.jpg,.venv/*,docs/_build/*,docs/source/_static/*,hedspec/*,tests/*"
ignore-words-list = "covert,hed,recuse,disjointness"
check-filenames = true
check-hidden = true
quiet-level = 2